style.css
/* ... */
header nav ul li a {
    /*color: #fff;*/
    color: black;
    text-decoration: none;
    transition: 0.3s;
}

header nav ul li a:hover {
    color: #4ade80;
}

/* Hamburger Menu */
.menu-toggle {
    display: none;
    font-size: 1.5rem;
    cursor: pointer;
    color: black;
}

/* Side Navbar */
.side-nav {
    height: 100%;
    width: 0;
    position: fixed;
    top: 0;
    right: 0; /* slide from the right */
    background-color: #0f172a;
    overflow-x: hidden;
    transition: 0.3s;
    padding-top: 3rem;
    z-index: 1500;
}

.side-nav ul {
    list-style: none;
    padding: 0;
}

.side-nav ul li {
    margin: 2rem 0;
    text-align: center;
}

.side-nav ul li a {
    color: #fff;
    text-decoration: none;
    font-size: 1.5rem;
    transition: color 0.3s;
}

.side-nav ul li a:hover {
    color: #4ade80;
}

.close-btn {
    position: absolute;
    top: 1rem;
    right: 1.5rem;
    font-size: 2rem;
    cursor: pointer;
    color: #fff;
}

/* Mobile only */
@media(max-width: 768px) {
    header nav {
        display: none; /* hide main nav */
    }
    .menu-toggle {
        display: block;
    }
}

/* Hero Section */
/*.hero {
    background: linear-gradient(90deg, #4ade80, #06b6d4);
    color: #fff;
    padding: 6rem 0;
    text-align: center;
}*/

#project-process{
  width: 100%;
}

.slidesContainer {
  width: 100%;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /*padding-top: 1rem;*/
  gap: 2rem;
  padding-bottom: 4rem;
  height: auto;
}

.slides {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  overflow: hidden; /* Ensure only one slide is visible at a time */
  position: relative;
  height: 85vh;
}

.Project-slides {
  position: absolute;      /* Absolute positioning within the slides container */
  top: 50%;                /* Center vertically */
  left: 50%;               /* Center horizontally */
  transform: translate(-50%, -50%); /* Adjust position to be centered */
  width: 100vw;
  max-width: 100vw;
  overflow: hidden;
  height: 85vh;
  display: flex;
  opacity: 0;/*Hide slides by default*/
  visibility: hidden;/*Hide slides by default to avoid layout issues*/
  transition: opacity 1s ease-in-out;
  box-shadow: 0 0.25rem 0.5rem rgba(0, 0, 0, 0.7);
  border-radius: 0.9375rem;
}

@media (max-width: 768px) {

  #project-process{
    width: 98vw;
  }

  .slides {
    height: 98vh;
  }

  .Project-slides {
    height: 98vh;
  }
}

/* Make active slide visible */
.Project-slides.activeSlide {
  opacity: 1;
  visibility: visible;
}

/* -------------Title Slide ---------- */

.title-slide .left, .title-slide .right {
  height: 100%;
}

.title-slide .left{
  width: 30%;
}

.title-slide .right {
  width: 70%;
}

.title-slide .left {
  background-image: url("images/CFAS_Hero_Background.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  position: relative;
  --c: 50px; /* control the curvature (works with percentage) */
  aspect-ratio: 2/3;
  /* you can also update the 60%  */
  mask: radial-gradient(var(--c) 60% at right,#0000 calc(100% - 1px),#000);
}

.title-slide .right {
  padding: 1rem 0.5rem;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: white;
  position: relative;
  flex-wrap: wrap;
  z-index: 2; /* Ensure this stays above the circle-title-slide */
}


.title-slide-img {
  position: absolute;
  top: 50%;
  left: 28%;
  -o-transform: translate(-50%, -50%);
  width: 18rem;
  height: 18rem;
  border-radius: 50%;
  border: 2px solid #ffff;
  background-color: #ffffff;
  z-index: 10;
  -webkit-transform: translate(-50%, -50%);
  -moz-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
}

.Thin-text-title{
  position: relative;
  top: -3rem;
  font-weight: 200;
  font-size: 1rem;
  font-family: 'Playfair Display';
  padding: 0 0.6rem;
}

.Big-text-title{
  position: relative;
  display: inline-flex;
  flex-wrap: wrap;
  top: -2rem;
  font-weight: 800;
  font-size: 250%;
  font-family: 'Bebas Neue', sans-serif;
  padding: 0 0.6rem;
}

.Big-text-paragraph{
  font-size: 98%;
  padding: 0 0.6rem;
  position: relative;
  display: inline-flex;
  flex-wrap: wrap;
  top: -2rem;
}

.title-slide .right p{
  display: flex;
  flex-direction: column;
}

.cta-btn, .btn {
  transition: all 0.3s ease-in-out;
  font-family: "Dosis", sans-serif;
}

.cta-btn, .btn {
  width: auto;
  height: 60px;
  padding: 0 1rem;
  border-radius: 50px;
  background-image: linear-gradient(135deg, #ea5455 0%, #f26a21 100%);
  box-shadow: 0 20px 30px -6px rgba(238, 103, 97, 0.5);
  outline: none;
  cursor: pointer;
  border: none;
  font-size: 24px;
  color: white;
}

.cta-btn:hover, .btn:hover {
  transform: translateY(3px);
  box-shadow: none;
}

.cta-btn:active, .btn:active {
  opacity: 0.5;
}

@media (max-width: 768px) {
  .title-slide{
    flex-direction: column;
  }

  .title-slide .left, .title-slide .right {
    width: 100%;
  }

  .title-slide .left{
    height: 20vh;
    --c: 50px; /* control the curvature (works with percentage) */
  aspect-ratio: 3/2;
  /* you can also update the 60%  */
  mask: radial-gradient(60% var(--c) at bottom,#0000 calc(100% - 2px),#000);
  }

  .title-slide .right p{
    width: 95%;
  }

  .Big-text-title{
    position: relative;
  }

  .title-slide-img {
    position: absolute;
    top: 16%;
    left: 50%;
    -o-transform: translate(-50%, -50%);
    -webkit-transform: translate(-50%, -50%);
    -moz-transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    width: 10rem;
    height: 10rem;
  }

}

/* -------------End of Title Slide ---------- */

.hero h2 {
    font-size: 2.5rem;
    margin-bottom: 1rem;
}

.hero p {
    font-size: 1.2rem;
    margin-bottom: 2rem;
}
/* ... */

